Players can exist on multiple teams now but not same division. Fixed some spacing in player-list.

--- a/app/globals.css
+++ b/app/globals.css
@@ -47,3 +47,9 @@ body {
     @apply border-b border-zinc-100 dark:border-zinc-800 last:border-0 text-center;
   }
 }
+
+@layer utilities {
+  .overflow-wrap-anywhere {
+    overflow-wrap: anywhere;
+  }
+}
